crates/pg_syntax/tests/snapshots/postgres_regress/horology@220.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT to_timestamp('  20050302', 'YYYYMMDD');"
---
SelectStmt@0..46
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..44
    FuncCall@7..44
      Ident@7..19 "to_timestamp"
      Ascii40@19..20 "("
      AConst@20..32
        Sconst@20..32 "'  20050302'"
      Ascii44@32..33 ","
      Whitespace@33..34 " "
      AConst@34..44
        Sconst@34..44 "'YYYYMMDD'"
  Ascii41@44..45 ")"
  Ascii59@45..46 ";"

