crates/pg_syntax/tests/snapshots/postgres_regress/horology@223.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT to_timestamp('2011-12-18 11:38 A.M.', 'YYYY-MM-DD HH12:MI P.M.');"
---
SelectStmt@0..72
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..70
    FuncCall@7..70
      Ident@7..19 "to_timestamp"
      Ascii40@19..20 "("
      AConst@20..43
        Sconst@20..43 "'2011-12-18 11:38 A.M.'"
      Ascii44@43..44 ","
      Whitespace@44..45 " "
      AConst@45..70
        Sconst@45..70 "'YYYY-MM-DD HH12:MI P ..."
  Ascii41@70..71 ")"
  Ascii59@71..72 ";"

