crates/pg_syntax/tests/snapshots/postgres_regress/horology@227.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT to_timestamp('2011-12-18 11:38 +05:20', 'YYYY-MM-DD HH12:MI TZH:TZM');"
---
SelectStmt@0..77
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..75
    FuncCall@7..75
      Ident@7..19 "to_timestamp"
      Ascii40@19..20 "("
      AConst@20..45
        Sconst@20..45 "'2011-12-18 11:38 +05 ..."
      Ascii44@45..46 ","
      Whitespace@46..47 " "
      AConst@47..75
        Sconst@47..75 "'YYYY-MM-DD HH12:MI T ..."
  Ascii41@75..76 ")"
  Ascii59@76..77 ";"

